--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build": "vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
@@ -19,9 +19,10 @@
         "framer-motion": "^11.0.0",
         "leaflet": "^1.9.4",
         "leaflet.markercluster": "^1.5.3",
-        "lucide-react": "^0.300.0",
+        "lucide-react": "^0.460.0",
         "react": "^19.2.4",
         "react-dom": "^19.2.4",
+        "react-is": "^19.0.0",
         "react-hook-form": "^7.71.1",
         "react-leaflet": "^4.2.1",
         "react-leaflet-cluster": "^4.0.0",
