--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,12 @@
         "supercluster": "^8.0.1",
         "zustand": "^4.4.0"
     },
+    "overrides": {
+        "react-leaflet": {
+            "react": "$react",
+            "react-dom": "$react-dom"
+        }
+    },
     "devDependencies": {
         "@types/leaflet.markercluster": "^1.5.6",
         "@types/react": "^19.2.10",
