fix: override react-leaflet-cluster peer dep

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,9 @@
         "react-leaflet": {
             "react": "$react",
             "react-dom": "$react-dom"
+        },
+        "react-leaflet-cluster": {
+            "react-leaflet": "$react-leaflet"
         }
     },
     "devDependencies": {
