fix: explicit react overrides for react-leaflet-cluster

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,9 @@
             "react-dom": "$react-dom"
         },
         "react-leaflet-cluster": {
-            "react-leaflet": "$react-leaflet"
+            "react-leaflet": "$react-leaflet",
+            "react": "$react",
+            "react-dom": "$react-dom"
         }
     },
     "devDependencies": {
