--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
         "@types/pdfkit": "^0.17.4",
         "@types/qrcode": "^1.5.6",
         "@types/sqlite3": "^3.1.11",
+        "@types/streamifier": "^0.1.2",
         "adminjs": "^6.8.7",
         "argon2": "^0.41.1",
         "axios": "^1.13.5",
@@ -56,6 +57,7 @@
         "cache-manager-redis-yet": "^5.1.5",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.3",
+        "cloudinary": "^2.9.0",
         "connect-typeorm": "^2.0.0",
         "express-formidable": "^1.2.0",
         "express-session": "^1.19.0",
@@ -74,6 +76,7 @@
         "socket.io": "^4.8.3",
         "socket.io-client": "^4.8.3",
         "sqlite3": "^5.1.7",
+        "streamifier": "^0.1.1",
         "typeorm": "^0.3.28",
         "winston": "^3.19.0",
         "winston-daily-rotate-file": "^5.0.0",
