fix: idempotent seeding and env documentation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -36,3 +36,11 @@ HACIENDA_IDP_USER=your_hacienda_idp_user@atv.hacienda.go.cr
 HACIENDA_IDP_PIN=your_pin
 HACIENDA_P12_BASE64=your_p12_base64_encoded_file
 HACIENDA_P12_PIN=your_p12_pin
+
+# Storage (Cloudinary)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
+# Cache (Redis - Optional)
+REDIS_URL=redis://default:password@host:port
