--- a/backend/package.json
+++ b/backend/package.json
@@ -61,6 +61,7 @@
         "connect-typeorm": "^2.0.0",
         "express-formidable": "^1.2.0",
         "express-session": "^1.19.0",
+        "helmet": "^8.1.0",
         "multer": "^2.0.2",
         "nest-winston": "^1.10.2",
         "node-forge": "^1.3.3",
