--- a/backend/package.json
+++ b/backend/package.json
@@ -58,6 +58,7 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.3",
         "cloudinary": "^2.9.0",
+        "compression": "^1.7.4",
         "connect-typeorm": "^2.0.0",
         "express-formidable": "^1.2.0",
         "express-session": "^1.19.0",
@@ -88,6 +89,7 @@
         "@nestjs/cli": "^11.0.0",
         "@nestjs/schematics": "^11.0.0",
         "@nestjs/testing": "^11.0.1",
+        "@types/compression": "^1.7.5",
         "@types/express": "^5.0.0",
         "@types/jest": "^30.0.0",
         "@types/multer": "^2.0.0",
