--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
         "test:e2e": "jest --config ./test/jest-e2e.json",
+        "test:manual": "jest --config ./jest-manual.config.json",
         "typeorm": "npm run build && npx typeorm -d dist/config/typeorm.config.js",
         "migration:generate": "npm run typeorm -- migration:generate",
         "migration:run": "npm run typeorm -- migration:run",
